--- a/src/app/layout/toolbar/toolbar.component.html
+++ b/src/app/layout/toolbar/toolbar.component.html
@@ -1,8 +1,15 @@
 <mat-toolbar color="primary">
-  <button mat-icon-button><mat-icon>menu</mat-icon></button>
+  <button mat-icon-button (click)="sideNavService.toggle()">
+    <mat-icon>menu</mat-icon>
+  </button>
+
   <span class="padding16">Application Title</span>
+
   <span class="fill-remaining-space"></span>
-  <button mat-button class="padding16"><mat-icon>shopping_cart</mat-icon></button>
-  <button  mat-button class="padding16">Iniciar sesion</button>
-  <button mat-icon-button class="toolbar-img"><img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="userImg" class="image-cropper"/></button>
+
+  <button mat-button class="padding16">
+    <mat-icon>shopping_cart</mat-icon>
+  </button>
+
+  <button mat-button class="padding16">Iniciar sesion</button>
 </mat-toolbar>
