Fixing Style Errors

--- a/src/app/layout/nav/nav.component.html
+++ b/src/app/layout/nav/nav.component.html
@@ -1,2 +1,4 @@
-<app-toolbar></app-toolbar>
-<app-side-nav></app-side-nav>
+<header>
+    <app-toolbar></app-toolbar>
+    <app-side-nav></app-side-nav>
+</header>
