Making UI Responsive

--- a/src/app/layout/nav/nav.component.html
+++ b/src/app/layout/nav/nav.component.html
@@ -1,4 +1,6 @@
 <header>
     <app-toolbar></app-toolbar>
-    <app-side-nav></app-side-nav>
+    <app-side-nav>
+        <ng-content></ng-content>
+    </app-side-nav>
 </header>
