--- a/src/app/layout/toolbar/toolbar.component.css
+++ b/src/app/layout/toolbar/toolbar.component.css
@@ -6,6 +6,10 @@
   padding: 16px;
 }
 
+.toolbar--padding-left {
+  padding-left: 16px;
+}
+
 .toolbar__profile-photo--mask {
   height: auto;
   width: auto;
