--- a/src/app/layout/toolbar/toolbar.component.html
+++ b/src/app/layout/toolbar/toolbar.component.html
@@ -3,25 +3,34 @@
     <mat-icon>menu</mat-icon>
   </button>
 
-  <span class="toolbar--padding">Application Title</span>
+  <span class="toolbar--padding-left">Application Title</span>
   <span class="fill-remaining-space"></span>
 
-  <button mat-button class="toolbar--padding">
-    <mat-icon>shopping_cart</mat-icon>
-  </button>
+
 
   <!-- Show login if there's no user -->
-  <div *ngIf="(user | async) as person; else guest">
-    <button mat-button [matMenuTriggerFor]="menu" class="toolbar--padding toolbar__profile-photo--mask">
-      <img class="toolbar__profile-photo--img" src="{{person.photoURL}}" alt="Profile photo">
-    </button>
+  <div [hidden]="isHandset$ | async">
+    <div *ngIf="(user | async); then auth else guest"></div>
 
-    <mat-menu #menu="matMenu" [overlapTrigger]="false">
-      <button mat-menu-item (click)="authService.signOut()">Cerrar Sesión</button>
-    </mat-menu>
+    <ng-template #auth>
+        <button mat-icon-button>
+            <mat-icon>shopping_cart</mat-icon>
+          </button>
+    
+          <button mat-button [matMenuTriggerFor]="menu" class="toolbar--padding toolbar__profile-photo--mask">
+            <img class="toolbar__profile-photo--img" src="{{(user | async)?.photoURL}}" alt="Profile photo">
+          </button>
+    
+          <mat-menu #menu="matMenu" [overlapTrigger]="false">
+            <button mat-menu-item (click)="authService.signOut()">Cerrar Sesión</button>
+          </mat-menu>
+    </ng-template>
+
+    <ng-template #guest>
+      <button mat-button class="toolbar--padding" (click)="authService.googleLogin()">Iniciar sesion</button>
+    </ng-template>
   </div>
 
-  <ng-template #guest>
-    <button mat-button class="toolbar--padding" (click)="authService.googleLogin()">Iniciar sesion</button>
-  </ng-template>
+  <ng-template #hola>hola</ng-template>
+
 </mat-toolbar>
