--- a/src/app/layout/side-nav/side-nav.component.html
+++ b/src/app/layout/side-nav/side-nav.component.html
@@ -1,11 +1,12 @@
 <mat-sidenav-container>
-  <mat-sidenav mode="side" opened #sidenav>
+  <mat-sidenav #sidenav fixedInViewport="false" [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'" [mode]="(isHandset$ | async) ? 'over' : 'side'"
+    [opened]="!(isHandset$ | async)">
     <mat-list>
       <h3 mat-subheader>
         Categorias
       </h3>
       <mat-list-item *ngFor="let category of categories">
-        <h4 mat-line>{{category.name}}</h4>
+        <button mat-button disableRipple>{{category.name}}</button>
       </mat-list-item>
     </mat-list>
   </mat-sidenav>
