cards (ahora si xd)

--- a/src/app/shared/card/card.component.html
+++ b/src/app/shared/card/card.component.html
@@ -3,7 +3,7 @@
       <div mat-card-avatar class="corn-header-image"></div>
       <mat-card-title>{{'titulo'}}</mat-card-title>
       <mat-card-subtitle>{{'proovedor'}}</mat-card-subtitle>
-      <mat-card-subtitle>Cantidad Disponible: {{'cantidad'}}</mat-card-subtitle>
+      <mat-card-subtitle>Cantidad Disponible: {{'cantidad'}} {{'medida'}}</mat-card-subtitle>
     </mat-card-header>
   </mat-card>
   
