--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-nav>
     <router-outlet>
     </router-outlet>
-    <app-landing></app-landing>
+    <app-landing>
+    </app-landing>
 </app-nav>
