--- a/src/app/shared/card/card.component.html
+++ b/src/app/shared/card/card.component.html
@@ -1,9 +1,8 @@
 <mat-card class="example-card">
-    <mat-card-header>
-      <div mat-card-avatar class="corn-header-image"></div>
-      <mat-card-title>{{'titulo'}}</mat-card-title>
-      <mat-card-subtitle>{{'proovedor'}}</mat-card-subtitle>
-      <mat-card-subtitle>Cantidad Disponible: {{'cantidad'}} {{'medida'}}</mat-card-subtitle>
-    </mat-card-header>
-  </mat-card>
-  
+  <mat-card-header>
+    <div mat-card-avatar class="corn-header-image"></div>
+    <mat-card-title>{{data.title}}</mat-card-title>
+    <mat-card-subtitle>{{data.proveedor}}</mat-card-subtitle>
+    <mat-card-subtitle>Cantidad Disponible: {{data.cantidad}} {{data.medida}}</mat-card-subtitle>
+  </mat-card-header>
+</mat-card>
