--- a/src/app/dashboard/offer/offer.component.html
+++ b/src/app/dashboard/offer/offer.component.html
@@ -1,1 +1,3 @@
-<div class="offer"><img class="offer-img" src="../../assets/img_mountains_wide.jpg"></div>
+<div class="offer">
+    <img class="offer-img" src="../../assets/img_mountains_wide.jpg">
+</div>
