--- a/src/app/layout/nav/nav.component.html
+++ b/src/app/layout/nav/nav.component.html
@@ -1,5 +1,6 @@
-<app-toolbar>
-</app-toolbar>
+<header>
+    <app-toolbar></app-toolbar>
+</header>
 <app-side-nav>
     <ng-content></ng-content>
 </app-side-nav>
