--- a/src/app/layout/side-nav/side-nav.component.html
+++ b/src/app/layout/side-nav/side-nav.component.html
@@ -16,6 +16,8 @@
   </mat-sidenav>
 
   <mat-sidenav-content>
-    <ng-content></ng-content>
+    <main>
+      <ng-content></ng-content>
+    </main>
   </mat-sidenav-content>
 </mat-sidenav-container>
