--- a/src/app/dashboard/landing/landing.component.html
+++ b/src/app/dashboard/landing/landing.component.html
@@ -1,17 +1,19 @@
-<app-offer></app-offer>
-<main>
-  <div>
-    <h3 mat-subheader>Mas Vendidos</h3>
-    <app-card class="card" *ngFor="let profile of feed$" [data]="profile"></app-card>
-  </div>
+<div class="dashboard">
+  <app-offer></app-offer>
+  <div class="dashboard__offers">
+    <div>
+      <h3 mat-subheader>Más Vendidos</h3>
+      <app-card class="card" *ngFor="let profile of (feed$ | async)" [data]="profile"></app-card>
+    </div>
 
-  <div>
-    <h3>Recien Agregados</h3>
-    <app-card class="card" *ngFor="let profile of feed$" [data]="profile"></app-card>
-  </div>
+    <div>
+      <h3>Recién Agregados</h3>
+      <app-card class="card" *ngFor="let profile of (feed$ | async)" [data]="profile"></app-card>
+    </div>
 
-  <div>
-    <h3>Vendedores Verificados</h3>
-    <app-card class="card" *ngFor="let profile of feed$" [data]="profile"></app-card>
+    <div>
+      <h3>Vendedores Verificados</h3>
+      <app-card class="card" *ngFor="let profile of (feed$ | async)" [data]="profile"></app-card>
+    </div>
   </div>
-</main>
+</div>
