--- a/src/app/layout/nav/nav.component.html
+++ b/src/app/layout/nav/nav.component.html
@@ -1,6 +1,5 @@
-<header>
-    <app-toolbar></app-toolbar>
-    <app-side-nav>
-        <ng-content></ng-content>
-    </app-side-nav>
-</header>
+<app-toolbar>
+</app-toolbar>
+<app-side-nav>
+    <ng-content></ng-content>
+</app-side-nav>
