--- a/src/app/layout/toolbar/toolbar.component.html
+++ b/src/app/layout/toolbar/toolbar.component.html
@@ -22,6 +22,7 @@
 
         <mat-menu #menu="matMenu" [overlapTrigger]="false">
           <button mat-menu-item (click)="authService.signOut()">Cerrar Sesión</button>
+          <app-profile></app-profile>
         </mat-menu>
       </ng-template>
 
