Fixing Profile Service

--- a/src/app/layout/toolbar/toolbar.component.html
+++ b/src/app/layout/toolbar/toolbar.component.html
@@ -21,8 +21,10 @@
         </button>
 
         <mat-menu #menu="matMenu" [overlapTrigger]="false">
+          <app-profile uid="{{(user | async)?.uid}}">
+
+          </app-profile>
           <button mat-menu-item (click)="authService.signOut()">Cerrar Sesión</button>
-          <app-profile></app-profile>
         </mat-menu>
       </ng-template>
 
