--- a/src/app/profiles/profile/profile.dialog.html
+++ b/src/app/profiles/profile/profile.dialog.html
@@ -1,6 +1,6 @@
 <div>
     <h1 mat-dialog-title>Favorite Animal</h1>
     <div mat-dialog-content>
-        My favorite animal is: {{data.animal}}
+        My favorite animal is: {{(data | async)?.name}}
     </div>
 </div>
