--- a/src/app/dashboard/offer/offer.component.html
+++ b/src/app/dashboard/offer/offer.component.html
@@ -1,1 +1,3 @@
-<img class="offer-img" src="../../assets/img_mountains_wide.jpg">
+<div class="offert__wrapper">
+    <img class="offer-img" src="../../assets/img_mountains_wide.jpg">
+</div>
