--- a/src/app/layout/toolbar/toolbar.component.html
+++ b/src/app/layout/toolbar/toolbar.component.html
@@ -6,6 +6,8 @@
 
     <span class="toolbar--margin-left">BAM</span>
     <span class="fill-remaining-space"></span>
+    <app-searchbar></app-searchbar>
+    <span class="fill-remaining-space"></span>
 
     <!-- Show login if there's no user -->
     <div [hidden]="isHandset$ | async">
