Fixed mobile view

--- a/src/app/profiles/profile/profile.dialog.html
+++ b/src/app/profiles/profile/profile.dialog.html
@@ -1,6 +1,7 @@
 <div>
-    <h1 mat-dialog-title>Favorite Animal</h1>
+    <h1 mat-dialog-title>Mi Perfil</h1>
     <div mat-dialog-content>
-        My favorite animal is: {{data.animal}}
+        Name <br>
+        Address <br>
     </div>
 </div>
