--- a/src/app/layout/nav/nav.component.html
+++ b/src/app/layout/nav/nav.component.html
@@ -1,8 +1,5 @@
-<header>
-    <app-toolbar></app-toolbar>
-</header>
+<app-toolbar>
+</app-toolbar>
 <app-side-nav>
-    <div>
     <ng-content></ng-content>
-</div>
 </app-side-nav>
