--- a/src/app/layout/searchbar/searchbar.component.html
+++ b/src/app/layout/searchbar/searchbar.component.html
@@ -1,6 +1,8 @@
 <form class="searchbar">
   <mat-form-field class="full-width">
-    <input type="text" matInput placeholder="Buscar">
+    <input matInput type="text" [(ngModel)]="value" name="standalone">
+    <button mat-button *ngIf="value" matSuffix mat-icon-button aria-label="Clear" (click)="value=''">
+      <mat-icon>close</mat-icon>
+    </button>
   </mat-form-field>
-  <button mat-icon-button (click)="sd()"><mat-icon>search</mat-icon></button>
 </form>
