--- a/src/app/layout/side-nav/side-nav.component.css
+++ b/src/app/layout/side-nav/side-nav.component.css
@@ -1,11 +1,50 @@
+.desktop {
+  height: calc(100vh - 64px);
+}
+
+.mobile {
+  height: calc(100vh - 56px);
+}
+
 mat-sidenav {
   width: 256px;
   display: grid;
-
-  grid-template-rows: 1fr 56px;
+  max-height: 100%;
+  grid-template-rows: 56px 1fr;
 }
 
 .nav__button {
   text-align: left;
+  width: 100%;
+}
+
+.mobile-login__button {
+  width: 100%;
+  height: 100%;
+}
+
+.mobile-login {
+  width: 100%;
+  display: grid;
+  grid: 1fr / 52px 1fr;
+  grid-gap: 2px;
+  align-items: center;
+  padding: 5px;
+}
+
+.mobile-login p {
+  text-align: start;
+}
+
+.mobile-login__photo {
+  justify-self: center;
+  max-width: 32px;
+  max-height: 32px;
+  border-radius: 50%;
+}
+
+.side-nav__login {
+  grid-column: span 2;
+  height: 100%;
   width: 100%;
 }
