--- a/src/app/layout/toolbar/toolbar.component.html
+++ b/src/app/layout/toolbar/toolbar.component.html
@@ -6,7 +6,7 @@
 
     <span class="toolbar--margin-left">BAM</span>
     <span class="fill-remaining-space"></span>
-    <app-searchbar></app-searchbar>
+    <app-searchbar [hidden]="isHandset$ | async"></app-searchbar>
     <span class="fill-remaining-space"></span>
 
     <!-- Show login if there's no user -->
@@ -31,7 +31,7 @@
       </ng-template>
 
       <ng-template #guest>
-        <button mat-button class="toolbar--margin-left toolbar--margin-right" (click)="authService.googleLogin()">Iniciar sesion</button>
+        <button mat-button class="toolbar--margin-left toolbar--margin-right" routerLink="/login" routerLinkActive="active">Iniciar sesion</button>
       </ng-template>
     </div>
 
