Adding anchor to Brand Name

--- a/src/app/layout/toolbar/toolbar.component.html
+++ b/src/app/layout/toolbar/toolbar.component.html
@@ -4,9 +4,14 @@
       <mat-icon>menu</mat-icon>
     </button>
 
-    <span class="toolbar--margin-left">BAM</span>
+    <a routerLink="/">
+      <span class="toolbar--margin-left">BAM</span>
+    </a>
+
     <span class="fill-remaining-space"></span>
+
     <app-searchbar [hidden]="isHandset$ | async"></app-searchbar>
+
     <span class="fill-remaining-space"></span>
 
     <!-- Show login if there's no user -->
