--- a/src/app/shared/card/card.component.html
+++ b/src/app/shared/card/card.component.html
@@ -1,10 +1,10 @@
-<mat-card class="card">
+<mat-card class="card" [routerLink]="['product', data.id]">
   <mat-card-header>
     <div mat-card-avatar class="card-img">
       <img class="crop-img" src="https://exoticfruitbox.com/wp-content/uploads/2015/10/mango.jpg" alt="Producto">
     </div>
-    <mat-card-title>{{data.title}}</mat-card-title>
-    <mat-card-subtitle>{{data.proveedor}}</mat-card-subtitle>
-    <mat-card-subtitle>Cantidad Disponible: {{data.cantidad}} {{data.medida}}</mat-card-subtitle>
+    <mat-card-title>{{data.nombre}}</mat-card-title>
+    <mat-card-subtitle>Cantidad Disponible: {{data.cantidad | number}} {{data.unidad | titlecase}}</mat-card-subtitle>
+    <mat-card-subtitle>Costo: {{data.cantidad * data.precioPorUnidad | currency}} MXN</mat-card-subtitle>
   </mat-card-header>
 </mat-card>
