--- a/src/app/product-detail/prod-desc/prod-desc.component.css
+++ b/src/app/product-detail/prod-desc/prod-desc.component.css
@@ -23,3 +23,20 @@ img {
     margin-right: auto;
     width: 40%;
 }
+
+h2 {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-display: 200;
+    size: 60px;
+}
+
+.grid-container {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    padding: 10px;
+  }
+  .grid-item {
+    padding: 20px;
+    font-size: 30px;
+    text-align: center;
+  }
