--- a/src/app/product-detail/prod-desc/prod-desc.component.css
+++ b/src/app/product-detail/prod-desc/prod-desc.component.css
@@ -21,7 +21,7 @@ img {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 40%;
+    width: 60%;
 }
 
 h2 {
@@ -33,11 +33,20 @@ h2 {
 .grid-container {
     display: grid;
     grid-template-columns: auto auto auto;
-    padding: 40px;
+    grid-gap: 10px;
+    padding: 10px;
   }
-  .grid-item {
-    padding: 20px;
-    font-size: 30px;
+  .grid-container > div {
     text-align: center;
-    font-size: 24px;
+    padding: 20px 0;
+    font-size: 30px;
+  }
+  .item1 {
+    grid-row-start: 1;
+    grid-row-end: 3;
+  }
+
+  .item7 {
+      grid-column-start: 2;
+      grid-column-end: 4;
   }
