--- a/src/app/product-detail/prod-desc/prod-desc.component.html
+++ b/src/app/product-detail/prod-desc/prod-desc.component.html
@@ -1,28 +1,30 @@
 <div class="main">
-    <div class="center">
-        <img align="middle" height="20%" width="20%" src="../../assets/corn.png">
-    </div>
     <mat-card>
         <div class="grid-container">
-            <div class="grid-item">
+            <div class="item1">
+                <div class="center">
+                    <img align="middle" height="20%" width="20%" src="../../assets/corn.png">
+                </div>
+            </div>
+            <div class="item2">
                 <h2>{{producto}}</h2>
             </div>
-            <div class="grid-item">
+            <div class="item3">
                 <h4>Nombre de Proovedor: {{nombreProveedor}}</h4>
             </div>
-            <div class="grid-item">
+            <div class="item4">
                 <h6>Fecha de plantacion: {{fechaPlantacion}}</h6>
             </div>
-            <div class="grid-item">
+            <div class="item5">
                 <h6>Fecha de Cosecha: {{fechaCosecha}}</h6>
             </div>
-            <div class="grid-item">
+            <div class="item6">
                 <h6>Cantidad disponible: {{cantidad}} {{unidad}}</h6>
             </div>
-            <div class="grid-item">
+            <div class="item7">
                 <h6>Precio por {{unidad}}: {{cantidad}} </h6>
             </div>
-        </div>
+        </div><br>
         <form [formGroup]="prodDescriptionForm">
             <!--Value: {{ prodDescriptionForm.value | json }} -->
             <mat-slider thumbLabel [displayWith]="formatLabel" ng-value="value" formControlName="cantidadAComprar" tickInterval="1000"
