--- a/src/app/product-detail/prod-desc/prod-desc.component.html
+++ b/src/app/product-detail/prod-desc/prod-desc.component.html
@@ -3,7 +3,7 @@
         <div class="grid-container">
             <div class="item1">
                 <div class="center">
-                    <img align="middle" height="20%" width="20%" src="../../assets/corn.png">
+                    <img align="middle" height="20%" width="20%" src="../../assets/cultivo.jfif">
                 </div>
             </div>
             <div class="item2">
