--- a/src/app/product-detail/prod-desc/prod-desc.component.css
+++ b/src/app/product-detail/prod-desc/prod-desc.component.css
@@ -1,52 +1,55 @@
 * {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .main {
-    padding: 100px;
+  padding: 100px;
 }
 
 mat-slider {
-    width: 100%;
-  }
+  width: 100%;
+}
 
-  .center {
-    margin: auto;
-    width: 50%;
-    border: 3px;
-    padding: 10px;
+.center {
+  margin: auto;
+  width: 50%;
+  border: 3px;
+  padding: 10px;
 }
 
 img {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 60%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 150%;
 }
 
 h2 {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-display: 200;
-    size: 60px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-display: 200;
+  size: 60px;
 }
 
 .grid-container {
-    display: grid;
-    grid-template-columns: auto auto auto;
-    grid-gap: 10px;
-    padding: 10px;
-  }
-  .grid-container > div {
-    text-align: center;
-    padding: 20px 0;
-    font-size: 30px;
-  }
-  .item1 {
-    grid-row-start: 1;
-    grid-row-end: 3;
-  }
+  display: grid;
+  grid-template-columns: auto auto auto;
+  grid-gap: 10px;
+  padding: 10px;
+  flex-wrap: wrap;
+}
+.grid-container > div {
+  text-align: center;
+  padding: 20px 0;
+  font-size: auto;
+}
+.item1 {
+  grid-row-start: 1;
+  grid-row-end: 3;
+}
 
-  .item7 {
-      grid-column-start: 2;
-      grid-column-end: 4;
-  }
+.item7 {
+  grid-column-start: 2;
+  grid-column-end: 4;
+}
