--- a/src/app/product-detail/prod-desc/prod-desc.component.html
+++ b/src/app/product-detail/prod-desc/prod-desc.component.html
@@ -1,10 +1,8 @@
-<div class="main">
+<div [className]="(isHandset | async) ? 'mainSmall' : 'main'">
     <mat-card>
-        <div class="grid-container">
+        <div [className]="(isHandset | async) ? 'flex-container' : 'grid-container'">
             <div class="item1">
-                <div class="center">
-                    <img align="middle" height="20%" width="20%" src="../../assets/cultivo.jfif">
-                </div>
+                    <img class="centerimg"  src="../../assets/cultivo.jfif">
             </div>
             <div class="item2">
                 <h2>{{producto}}</h2>
