Cambios y arreglos en form y profile

--- a/src/app/layout/toolbar/toolbar.component.html
+++ b/src/app/layout/toolbar/toolbar.component.html
@@ -4,9 +4,9 @@
       <mat-icon>menu</mat-icon>
     </button>
 
-    <a routerLink="/">
-      <span class="toolbar--margin-left">BAM</span>
-    </a>
+    <button class="toolbar--margin-left" mat-flat-button routerLink="/">
+      <span style="font-size: 24px">BAM</span>
+    </button>
 
     <span class="fill-remaining-space"></span>
 
