--- a/src/app/profiles/profile/profile.dialog.css
+++ b/src/app/profiles/profile/profile.dialog.css
@@ -32,6 +32,16 @@
   border-radius: 50%;
 }
 
+.dialog__img--mobile{
+  grid-area: 1 / 1 / 2 / 2;
+  place-self: center;
+
+  width: 64px;
+  height: 64px;
+  overflow: hidden;
+  border-radius: 50%;
+}
+
 .dialog__btn {
   grid-area: 1 / -1 / 2 / -2;
   justify-self: end;
