--- a/src/app/profiles/tabs/tabs.component.html
+++ b/src/app/profiles/tabs/tabs.component.html
@@ -1,15 +1,7 @@
-<div class="tabs">
+<div [className]="(isHandset | async) ? 'tabs-mobile' : 'tabs-desktop'">
   <mat-tab-group mat-stretch-tabs>
     <mat-tab label="Perfil">
       <app-profile-detail></app-profile-detail>
-    </mat-tab>
-
-    <mat-tab label="Compras">
-      <app-shoping-detail>1</app-shoping-detail>
-    </mat-tab>
-
-    <mat-tab label="Ventas">
-      <app-sales-detail></app-sales-detail>
     </mat-tab>
   </mat-tab-group>
 </div>
