--- a/src/app/shared/card/card.component.html
+++ b/src/app/shared/card/card.component.html
@@ -1,4 +1,4 @@
-<mat-card class="card" [routerLink]="['product', data.id]">
+<mat-card class="card" [routerLink]="['/product', data.id]">
   <mat-card-header>
     <div mat-card-avatar class="card-img">
       <img class="crop-img" src="https://exoticfruitbox.com/wp-content/uploads/2015/10/mango.jpg" alt="Producto">
