--- a/src/app/add-product/form/form.component.css
+++ b/src/app/add-product/form/form.component.css
@@ -1,11 +1,17 @@
-.form-content {
-  width: 90%;
-}
-
-.login {
+.form {
   height: 100%;
   display: flex;
   align-items: center;
+}
+
+.grid {
+  display: grid;
+  grid: 1fr / 1fr 1fr;
+  gap: 1em;
+}
+
+.form-field {
+  grid-column: 1 / span 2;
 }
 
 .form-desktop {
@@ -20,20 +26,16 @@
   margin: 0 auto;
 }
 
-.login-form__field {
-  width: 100%;
-}
-
-.login-form__submit {
+.product-form--wrapper {
   margin: 0 auto;
   text-align: center;
 }
 
-.login-form__google--wrapper {
-  margin: 0 auto;
-  text-align: center;
+textarea {
+  resize: none;
 }
 
-.login-form__google {
-  max-width: 250px;
+.form-mobile .form-select {
+  grid-column: 1 / span 2;
 }
+
