--- a/src/app/dashboard/offer/offer.component.html
+++ b/src/app/dashboard/offer/offer.component.html
@@ -1,3 +1,3 @@
 <div class="offert__wrapper">
-    <img class="offer-img" src="../../assets/img_mountains_wide.jpg">
+    <img class="offer-img" src="../../assets/offer.png">
 </div>
